--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "FPL ML Live Standings",
+  "name": "Fantasy Premier League Mini League Live Standings",
   "icons": [
     {
       "src": "favicon.ico",
@@ -8,14 +8,14 @@
       "type": "image/x-icon"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "android-chrome-icon.png",
+      "sizes": "192x192",
+      "type": "image/png" 
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "apple-touch-icon.png",
+      "sizes": "192x192",
+      "type": "image/png" 
     }
   ],
   "start_url": ".",
