--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "gh-pages": "^3.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
-    "react-error-boundary": "^3.0.2",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.3",
     "styled-components": "^5.2.0"
   },
   "scripts": {
